--- a/.github/workflows/helm-update-deps.yml
+++ b/.github/workflows/helm-update-deps.yml
@@ -6,6 +6,6 @@ on:
     types: [helm-update-deps]
 
 jobs:
-  release:
+  update:
     uses: onecx/ci-product/.github/workflows/helm-update-deps.yml@v1
     secrets: inherit
