feat: add onecx-parameter external api

--- a/openapi/onecx-parameter-v1.yaml
+++ b/openapi/onecx-parameter-v1.yaml
@@ -1,110 +1,144 @@
 ---
-openapi: 3.0.3
-info:
-  title: onecx-parameters v1
-  version: "1.0.0"
-servers:
-- url: http://onecx-parameter/
-tags:
-- name: parameter
-paths:
-  /v1/{productName}/{appId}/history:
-    post:
-      security:
-        - oauth2: [ ocx-pa-me:write ]
-      tags:
-      - parameter
-      description: Create Bucket request
-      operationId: bucketRequest
-      parameters:
-      - name: productName
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: appId
-        in: path
-        required: true
-        schema:
-          type: string
-      requestBody:
-        content:
-          application/json:
+  openapi: 3.0.3
+  info:
+    title: onecx-parameters v1
+    version: "1.0.0"
+  servers:
+    - url: http://onecx-parameter/
+  tags:
+    - name: parameter
+  paths:
+    /v1/{productName}/{appId}/history:
+      post:
+        security:
+          - oauth2: [ ocx-pa-me:write ]
+        tags:
+          - parameter
+        description: Create history bucket request
+        operationId: bucketRequest
+        parameters:
+          - name: productName
+            in: path
+            required: true
             schema:
-              $ref: '#/components/schemas/ParametersBucket'
-      responses:
-        "200":
-          description: OK
+              type: string
+          - name: appId
+            in: path
+            required: true
+            schema:
+              type: string
+        requestBody:
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ParametersBucket'
-        "404":
-          description: Not Found
-  /v1/{productName}/{appId}/parameters:
-    get:
-      security:
-        - oauth2: [ ocx-pa-ap:read ]
-      tags:
-      - parameter
-      description: Get parameters by application id
-      operationId: getApplicationParameters
-      parameters:
-      - name: productName
-        in: path
-        required: true
-        schema:
-          type: string
-      - name: appId
-        in: path
-        required: true
-        schema:
-          type: string
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema: {}
-        "404":
-          description: Not Found
-components:
-  securitySchemes:
-    oauth2:
-      type: oauth2
-      flows:
-        clientCredentials:
-          tokenUrl: https://oauth.simple.api/token
-          scopes:
-            ocx-pa-ap:read: Grants read access to application parameters
-            ocx-pa-me:write: Grants write access to parameter metrics
-  schemas:
-    ParameterInfo:
-      type: object
-      properties:
-        count:
-          format: int64
-          type: integer
-        type:
-          type: string
-        defaultValue:
-          type: string
-        currentValue:
-          type: string
-    ParametersBucket:
-      type: object
-      properties:
+        responses:
+          204:
+            description: OK
+          400:
+            description: Bad request
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ProblemDetailResponse'
+    /v1/{productName}/{appId}/parameters:
+      get:
+        security:
+          - oauth2: [ ocx-pa-ap:read ]
+        tags:
+          - parameter
+        description: Get parameters by application id
+        operationId: getApplicationParameters
         parameters:
-          type: object
-          additionalProperties:
-            $ref: '#/components/schemas/ParameterInfo'
-        instanceId:
+          - name: productName
+            in: path
+            required: true
+            schema:
+              type: string
+          - name: appId
+            in: path
+            required: true
+            schema:
+              type: string
+        responses:
+          200:
+            description: OK
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ParametersResponse'
+          404:
+            description: Not Found
+  components:
+    securitySchemes:
+      oauth2:
+        type: oauth2
+        flows:
+          clientCredentials:
+            tokenUrl: https://oauth.simple.api/token
+            scopes:
+              ocx-pa-ap:read: Grants read access to application parameters
+              ocx-pa-me:write: Grants write access to parameter metrics
+    schemas:
+      ParametersResponse:
+        type: object
+        additionalProperties:
           type: string
-        start:
-          format: date-time
-          type: string
-          example: 2022-03-10T12:15:50-04:00
-        end:
-          format: date-time
-          type: string
-          example: 2022-03-10T12:15:50-04:00
+      ParameterInfo:
+        type: object
+        properties:
+          count:
+            format: int64
+            type: integer
+          type:
+            type: string
+          defaultValue:
+            type: string
+          currentValue:
+            type: string
+      ParametersBucket:
+        type: object
+        properties:
+          parameters:
+            type: object
+            additionalProperties:
+              $ref: '#/components/schemas/ParameterInfo'
+          instanceId:
+            type: string
+          start:
+            format: date-time
+            type: string
+            example: 2022-03-10T12:15:50-04:00
+          end:
+            format: date-time
+            type: string
+            example: 2022-03-10T12:15:50-04:00
+      ProblemDetailResponse:
+        type: object
+        properties:
+          errorCode:
+            type: string
+          detail:
+            type: string
+          params:
+            type: array
+            items:
+              $ref: '#/components/schemas/ProblemDetailParam'
+          invalidParams:
+            type: array
+            items:
+              $ref: '#/components/schemas/ProblemDetailInvalidParam'
+      ProblemDetailParam:
+        type: object
+        properties:
+          key:
+            type: string
+          value:
+            type: string
+      ProblemDetailInvalidParam:
+        type: object
+        properties:
+          name:
+            type: string
+          message:
+            type: string
