feat: update openapi

--- a/openapi/onecx-parameter-v1.yaml
+++ b/openapi/onecx-parameter-v1.yaml
@@ -28,6 +28,7 @@
             schema:
               type: string
         requestBody:
+          required: true
           content:
             application/json:
               schema:
