feat: updated docs and api

--- a/openapi/onecx-parameter-v1.yaml
+++ b/openapi/onecx-parameter-v1.yaml
@@ -91,7 +91,7 @@
           count:
             format: int64
             type: integer
-          type:
+          description:
             type: string
           defaultValue:
             type: string
