--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -22,3 +22,8 @@ dependencies:
   repository: oci://ghcr.io/onecx/charts
   condition: "deployment.ui"
   alias: "ui"
+- name: onecx-parameter-operator
+  version: "*-0"
+  repository: oci://ghcr.io/onecx/charts
+  condition: "deployment.operator"
+  alias: "operator"
