--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,9 +1,2 @@
-name: onecx-parameter
-title: Parameter Management
+name: documentation
 version: latest
-start_page: general:index.adoc
-nav:
-  - modules/general/nav.adoc
-  - modules/onecx-parameter-svc/nav.adoc
-  - modules/onecx-parameter-bff/nav.adoc
-  - modules/onecx-parameter-ui/nav.adoc
