--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,9 +1,4 @@
-name: onecx-parameter
-title: Parameter Management
+# Define the same name space as used for the parent documentation project https://github.com/onecx/docs
+name: documentation
 version: latest
-start_page: general:index.adoc
-nav:
-  - modules/general/nav.adoc
-  - modules/onecx-parameter-svc/nav.adoc
-  - modules/onecx-parameter-bff/nav.adoc
-  - modules/onecx-parameter-ui/nav.adoc
+# Do not add any further properties here. This will affect the parent documentation project.
